--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
 
 h2 {
   font-family: "Inter", sans-serif;
-  font-weight: 700;
+  font-weight: 700;;
 }
 
 .logo {
@@ -31,7 +31,7 @@ h2 {
 
 .navbar a {
   position: relative;
-  color: #000000;
+  color: white;
   font-weight: 600;
   font-size: 1.2rem;
   text-decoration: none;
